kubernetes/exchange-rate/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: exchange-rate
  labels:
    app: exchange-rate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange-rate
  template:
    metadata:
      labels:
        app: exchange-rate
    spec:
      containers:
        - name: exchange-rate
          image: >-
            quay.io/williamsrlin/exchange-rate:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
