kubernetes/exchange-rate/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: exchange-rate
  labels:
    app: exchange-rate
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: exchange-rate
