kubernetes/exchange-rate/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: exchange-rate
  labels:
    app: exchange-rate
spec:
  to:
    kind: Service
    name: exchange-rate
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
